# home-cleaner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  app_config.yml  compose.yml  config.sample.yml  intra.py  pyproject.toml  sample.config.yml
app/: main.py
app/helpers/: format_dates.py  load_config.py  make_homes_chunks.py  validate_config.py
app/services/: __init__.py  homemaker.py  intra.py
homemaker-mock/: stub.json
tests/: test_main.py  test_main_functions.py  test_one_plus_one.py  test_service_homemaker.py
